Fixing menu and lead image display on mobile.

--- a/skins/agcommon_styles/responsive.scss
+++ b/skins/agcommon_styles/responsive.scss
@@ -178,6 +178,10 @@
         border: none;
     }
 
+    #portal-top-navigation.empty {
+        clear: both;
+    }
+
     #mobile-navigation {
         
         .top-navigation.empty {
@@ -1107,18 +1111,6 @@
         margin-top: 0.5625em;
     }
     
-    #portal-column-content.sl.sr .contentLeadImageContainer, 
-    .contentLeadImageContainer, 
-    .captionedImage, .captionedImage.right {
-        float: none;
-        display: block;
-        max-width: 100%;
-        text-align: left;
-        width: 100%;
-        margin-left: 0;
-        margin-top: 0.5em;
-    }
-
     body.template-folder_listing_z3 #content .tileItemLeadImage .contentLeadImageContainer {
         img,         
         img.tileImage {
